# vm

./: .gitignore  AGENTS.md  AUDIT.md  BOOTSPEED.md  BROWSER.md  Cargo.toml  DEBUGGING.md  DESIGN.md  DURABILITY.md  DYNLINK.md  EXEC.md  FRONTEND.md  GC.md  GLOSSARY.md  HANDOFF.md  HANDOFF_JIT.md  HOOKS.md  IMPORTS.md  INTERACTIVE_EMBEDDING.md  INTERP_PERF.md  INVARIANTS.md  ISSUES.md  JIT.md  LLVM.md  MMAP_CAPABILITY.md  OPT.md  OPT_BENCH.md  PEVAL.md  PEVAL_BENCH.md  POSIX.md  POWERBOX.md  PROCESS.md  README.md  SCHEDULING.md  SPEC.md  STAGE1.md  THREADS.md  TODO.md  TRAP_CONFINEMENT.md  WASM.md
bench/: Cargo.toml  baseline.txt  ci-bench-job.patch
bench/confine/: baseline.txt  native_main.c
bench/confine/kernels/: bytes.c  edn.c  fir.c  matmul.c  matmul_eb.c
bench/cross-engine/: .gitignore  README.md  bench.py  js.mjs  kernels.c  native_bench.c  run.sh  wasmrun.mjs  wasmtime_bench.py
bench/cross-engine/wasmtime-rs/: Cargo.toml
bench/embench/: wrapper.c
bench/embench/wasm/: defs.h  run.mjs
bench/rustbench/: README.md  prelude.rs
bench/rustbench/probes/: bitops.rs  checked.rs  floats.rs  reductions.rs  slices.rs  structs.rs  tables.rs  widemath.rs
bench/rustbench/w64/: Cargo.toml
bench/rustbench/workloads/: base64.rs  bfs.rs  hashmap.rs  parse.rs  sort.rs  vm.rs
bench/src/: main.rs  threads.rs
browser/: .gitignore  Cargo.toml  bench.mjs  bench_doom_jit.mjs  bench_doom_throughput.mjs  bench_jit.mjs  bench_pg.mjs  bench_prep.mjs  browser-dap-test.mjs  browser-jit-module-test.mjs  browser-jit-reactor-test.mjs  browser-play-editor-test.mjs  browser-test.mjs  browser-webgpu-test.mjs  build-codemirror-bundle.sh  build-onramp-assets.mjs  build-pg-assets.mjs  corpus.mjs  engine-imports.mjs  jitcodegen.mjs  live.mjs  pg-format-test.mjs  pg-reload-test.mjs  pg_snapshot_test.mjs  run.mjs  serve.mjs  threads-engine.mjs  threads-parallel.mjs  threads-spawn.mjs  tierup.mjs  wasmjit.mjs
browser/examples/: run_onramp.rs
browser/src/: gencorpus.rs  genfixture.rs  lib.rs  webgpu.rs
browser/tests/: display.rs  doom_reactor.rs  jit_module.rs  jit_reactor.rs  onramp.rs  pg_snapshot_roundtrip.rs  powerbox_cap_names.rs  reactor.rs  reactor_fs.rs  shared_reactor.rs
browser/tests/fixtures/: bounce.svmb  fsread.svmb  gradient.svmb  hello_onramp.svmb  life.svmb
browser/threads-spike/: Cargo.toml  threads-futex.mjs  threads.mjs
browser/threads-spike/.cargo/: config.toml
browser/threads-spike/src/: lib.rs
browser/web/: codemirror.bundle.js  coi-serviceworker.js  dap.js  editor.js  index.html  main.js  par.js  pg-format.js  play.html  play.js  wasmjit-module.js  wasmjit-reactor.js  wasmjit.js  webgpu.js  worker.js
browser/web/assets/: bounce.svmb  gradient.svmb  hello_c.svmb  life.svmb  mandelzoom.svmb
browser/wt/: Cargo.toml
browser/wt/src/: main.rs
crates/svm/: Cargo.toml
crates/svm-capi/: Cargo.toml
crates/svm-capi/examples/: README.md  hello.c
crates/svm-capi/include/: svm.h
crates/svm-capi/src/: abi_tests.rs  lib.rs
crates/svm-dap/: Cargo.toml
crates/svm-dap/src/: backend.rs  expr.rs  json.rs  lib.rs  main.rs
crates/svm-dap/tests/: dap.rs  dap_bytecode.rs
crates/svm-exec/: Cargo.toml
crates/svm-exec/src/: lib.rs
crates/svm-fiber/: Cargo.toml
crates/svm-fiber/src/: fiber.rs  imp.rs  lib.rs  stack_arena.rs  stack_unix.rs  stack_windows.rs  switch_aarch64.rs  switch_x86_64_sysv.rs  switch_x86_64_windows.rs
crates/svm-fs/: Cargo.toml
crates/svm-fs/src/: lib.rs
crates/svm-interp/: Cargo.toml
crates/svm-interp/src/: bytecode.rs  lib.rs
crates/svm-interp/tests/: blocking_freeze_refusal.rs  bytecode_svc.rs  concurrent_stages.rs  detached_windows.rs  fiber_parks.rs  handle_durability.rs  impl_wiring.rs  parallel_instantiate_miri.rs  parallel_jit_miri.rs  parallel_miri.rs  reactor.rs  revocation_unparks.rs  shared_program.rs  svc_handler_parks.rs  svc_multi_consumer.rs  svc_serve_loop.rs  vcpu_instantiate_miri.rs  vcpu_reactor.rs  vcpu_shared_host_miri.rs  vcpu_stdin_park.rs  vcpu_tierup.rs
crates/svm-jit/: Cargo.toml  GC_ROOTS_AUDIT.md  STACK_GUARD.md  STACK_GUARD_AUDIT.md  STACK_GUARD_FLIP.md  build.rs
crates/svm-jit/src/: durable_shadow.rs  dwarf.rs  fiber_registry.rs  fiber_rt.rs  gdb.rs  instantiator_rt.rs  lib.rs  mem.rs  os_thread_rt.rs  par.rs  par_jit.rs  setjmp_rt.rs  thread_rt.rs  trap_capture.c  trap_shim.c  vcpu_tls.rs
crates/svm-jit/tests/: bulk_mem.rs  stack_check.rs  stack_guard_fuzz.rs
crates/svm-llvm/: Cargo.toml
crates/svm-llvm/examples/: bcrun.rs  cap_call.rs  compile_latency.rs  corpus_diff.rs  cross_engine.rs  embench.rs  end_to_end.rs  footprint.rs  onramp_perf.rs  run_lua.rs  spectre_bench.rs  try_translate.rs
crates/svm-llvm/src/: blockaddr.rs  di.rs  from_llvm_ir.rs  lib.rs  wideint.rs
crates/svm-llvm/tests/: ci_tool_canary.rs  dap_over_llvm.rs  frontend_bench.rs  fs_cap.rs  lisp_demo.rs  llvm_alias.rs  lua_all.rs  lua_coroutine.rs  lua_coroutine_official.rs  lua_eval.rs  lua_files.rs  lua_first_light.rs  lua_floats.rs  lua_fmt.rs  lua_math.rs  lua_stdlib.rs  lua_sweep.rs  lua_testsuite.rs  lua_tlib.rs  lua_utf8.rs  mem_confine.rs  onramp_diff.rs  peval_corpus.rs  peval_demo.rs  peval_futamura.rs  peval_in_sandbox.rs  peval_jit.rs  snprintf.rs  translate.rs
crates/svm-mem/: Cargo.toml
crates/svm-mem/src/: lib.rs
crates/svm-opt/: Cargo.toml
crates/svm-opt/src/: cfg.rs  gvn.rs  instrument.rs  interproc.rs  lib.rs  licm.rs  load_elim.rs  reassociate.rs  sccp.rs  ssa.rs  thread.rs  (+1 more)
crates/svm-peval/: Cargo.toml
crates/svm-posix/: Cargo.toml
crates/svm-run/: Cargo.toml
crates/svm-snapshot/: Cargo.toml
crates/svm-spec/: Cargo.toml
crates/svm-wasi/: Cargo.toml
crates/svm-wasm/: Cargo.toml
crates/svm-wasmjit/: Cargo.toml
crates/svm-webgpu/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: coverage_walk.rs  decode_verify.rs  diff.rs  durable.rs  durable_fiber.rs  durable_jit.rs  durable_loop.rs  durable_loop_jit.rs  durable_recycle.rs  durable_recycle_jit.rs  mask.rs  onramp_diff.rs  opt_sccp.rs  opt_ssa_roundtrip.rs  roundtrip.rs  spec_ops.rs  spec_verify.rs  wasm_transpile.rs
(+500 files in other folders)
