[workspace]
resolver = "2"
members = [
    "crates/svm-ir",
    "crates/svm-mask",
    "crates/svm-mem",
    "crates/svm-text",
    "crates/svm-encode",
    "crates/svm-verify",
    "crates/svm-interp",
    "crates/svm-fiber",
    "crates/svm-jit",
    "crates/svm",
    "crates/svm-run",
]
# `fuzz/` is a cargo-fuzz crate (nightly + libfuzzer-sys); `bench/` pulls in Wasmtime for
# the comparison harness. Both are kept out of the workspace so stable
# `cargo build --workspace` / `cargo test` never pull them in.
exclude = ["fuzz", "bench"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.94"

# Keep the escape-TCB crates dependency-free (small, fast to compile, easy to audit).
# External deps live only in dev/bench/fuzz.
[workspace.dependencies]
svm-ir = { path = "crates/svm-ir" }
svm-mask = { path = "crates/svm-mask" }
svm-mem = { path = "crates/svm-mem" }
svm-text = { path = "crates/svm-text" }
svm-encode = { path = "crates/svm-encode" }
svm-verify = { path = "crates/svm-verify" }
svm-interp = { path = "crates/svm-interp" }
svm-fiber = { path = "crates/svm-fiber" }
svm-jit = { path = "crates/svm-jit" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
