[workspace]
resolver = "2"
members = [
    "crates/svm-ir",
    "crates/svm-mask",
    "crates/svm-mem",
    "crates/svm-text",
    "crates/svm-durable",
    "crates/svm-encode",
    "crates/svm-verify",
    "crates/svm-interp",
    "crates/svm-dap",
    "crates/svm-snapshot",
    "crates/svm-fiber",
    "crates/svm-jit",
    "crates/svm",
    "crates/svm-run",
    "crates/svm-wasm",
    "crates/svm-wasi",
]
# `fuzz/` is a cargo-fuzz crate (nightly + libfuzzer-sys); `bench/` pulls in Wasmtime for
# the comparison harness; `crates/svm-llvm` links libLLVM (the AOT LLVM→IR on-ramp, D54 —
# an opt-in, Linux-dev-only lane, off the runtime path). All three are kept out of the
# workspace so stable `cargo build --workspace` / `cargo test` never pull them in.
exclude = ["fuzz", "bench", "crates/svm-llvm"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.94"

# Keep the escape-TCB crates dependency-free (small, fast to compile, easy to audit).
# External deps live only in dev/bench/fuzz.
[workspace.dependencies]
svm-ir = { path = "crates/svm-ir" }
svm-mask = { path = "crates/svm-mask" }
svm-mem = { path = "crates/svm-mem" }
svm-text = { path = "crates/svm-text" }
svm-durable = { path = "crates/svm-durable" }
svm-encode = { path = "crates/svm-encode" }
svm-verify = { path = "crates/svm-verify" }
svm-interp = { path = "crates/svm-interp" }
svm-snapshot = { path = "crates/svm-snapshot" }
svm-fiber = { path = "crates/svm-fiber" }
svm-jit = { path = "crates/svm-jit" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
