[workspace]
resolver = "2"
members = [
    "crates/svm-ir",
    "crates/svm-mask",
    "crates/svm-mem",
    "crates/svm-text",
    "crates/svm-durable",
    "crates/svm-encode",
    "crates/svm-verify",
    "crates/svm-opt",
    "crates/svm-peval",
    "crates/svm-interp",
    "crates/svm-dap",
    "crates/svm-snapshot",
    "crates/svm-fiber",
    "crates/svm-jit",
    "crates/svm",
    "crates/svm-spec",
    "crates/svm-run",
    "crates/svm-wasm",
    "crates/svm-wasmjit",
    "crates/svm-wasi",
    "crates/svm-capi",
]
# `fuzz/` is a cargo-fuzz crate (nightly + libfuzzer-sys); `bench/` pulls in Wasmtime for
# the comparison harness; `crates/svm-llvm` is the AOT LLVM→IR on-ramp (D54 — an opt-in,
# Linux-dev-only lane, off the runtime path; links no libLLVM since the textual-`.ll` reader,
# but its tests shell out to `clang`/`llvm-dis`). All three are kept out of the workspace so
# `cargo build --workspace` / `cargo test` never pull them in.
exclude = ["fuzz", "bench", "crates/svm-llvm", "crates/svm-webgpu"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.94"

# Keep the escape-TCB crates dependency-free (small, fast to compile, easy to audit).
# External deps live only in dev/bench/fuzz.
[workspace.dependencies]
svm-ir = { path = "crates/svm-ir" }
svm-mask = { path = "crates/svm-mask" }
svm-mem = { path = "crates/svm-mem" }
svm-text = { path = "crates/svm-text" }
svm-durable = { path = "crates/svm-durable" }
svm-encode = { path = "crates/svm-encode" }
svm-verify = { path = "crates/svm-verify" }
# `default-features = false` here so dependents opt into `libm-floats` explicitly (the in-svm build
# needs it off); host consumers pull it in transitively via `svm-peval`'s default feature.
svm-opt = { path = "crates/svm-opt", default-features = false }
svm-peval = { path = "crates/svm-peval" }
svm-interp = { path = "crates/svm-interp" }
svm-snapshot = { path = "crates/svm-snapshot" }
svm-fiber = { path = "crates/svm-fiber" }
svm-jit = { path = "crates/svm-jit" }
svm-spec = { path = "crates/svm-spec" }
svm-wasmjit = { path = "crates/svm-wasmjit" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
