# Out-of-workspace (like `fuzz/`): pulls in Wasmtime, so the escape-TCB crates and the
# stable `cargo build --workspace` never see it. Run with `cargo run --release` from here.
[package]
name = "svm-bench-vs-wasmtime"
version = "0.0.0"
edition = "2021"
publish = false
# Two binaries now live here (`bench-vs-wasmtime` = the `--check` harness, `confine` = the
# confinement-cost probe), so a bare `cargo run` is ambiguous. Name the harness the default so the
# documented `cargo run --release -- --check …` (and the nightly `bench` CI job) resolves to it;
# the probe is `cargo run --bin confine`. (Without this the nightly bench lane died every night
# since Jul 10 with "could not determine which binary to run" — ISSUES.md I17 follow-up.)
default-run = "bench-vs-wasmtime"

[[bin]]
name = "bench-vs-wasmtime"
path = "src/main.rs"

[dependencies]
svm-ir = { path = "../crates/svm-ir" }
svm-text = { path = "../crates/svm-text" }
svm-jit = { path = "../crates/svm-jit" }
# The reference interpreter — the `interp` lane: the *same* IR the JIT runs, executed by the
# tree-walking oracle (`crates/svm/src/bin/bench.rs` tracks it too). Apples-to-apples with the JIT.
svm-interp = { path = "../crates/svm-interp" }
# The wasm→IR transpiler, for `--from-wasm`: run the *same* wasm bytes on SVM (transpiled to IR)
# and on Wasmtime — the apples-to-apples comparison, instead of hand-paired IR/WAT.
svm-wasm = { path = "../crates/svm-wasm" }
# The LLVM->IR on-ramp: the production svm-jit path (C -> clang -O2 bitcode -> SVM IR),
# for the confinement-cost harness (`--bin confine`) that compares svm-jit vs Wasmtime-w64
# on the same LP64 kernels the embench differential uses.
svm-llvm = { path = "../crates/svm-llvm" }
# The embedding runtime, for the mem-hooks overhead probe (`--bin hooks`): it measures the real
# embedder path (`Instance::with_mem_hooks`) on all three backends, hooked vs pristine (HOOKS.md §5).
svm-run = { path = "../crates/svm-run" }
# Minimal Wasmtime: the Cranelift compiler + the runtime, nothing else (no component
# model / gc / async), so we compare like-for-like (both lower core wasm via Cranelift).
wasmtime = { version = "45", default-features = false, features = ["cranelift", "runtime", "std", "threads"] }
wasmtime-wasi-threads = "45"
wat = "1"

[profile.release]
opt-level = 3

[workspace]
