# Detached (`[workspace]`) wasm entry crate — the SVM bytecode interpreter compiled to wasm so a
# host (browser / any wasm runtime) can run an SVM guest. Kept out of the main workspace because it
# targets wasm64 via `-Z build-std` (nightly), like `fuzz/`/`bench/`. See BROWSER.md.
[workspace]

[package]
name = "svm-browser"
version = "0.0.0"
edition = "2021"

# `cdylib` is the wasm artifact; `rlib` lets the native `gencorpus`/`genfixture` bins call the
# *same* `powerbox_exec` the wasm entry uses, so the differential compares identical logic.
[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "genfixture"
path = "src/genfixture.rs"

[[bin]]
name = "gencorpus"
path = "src/gencorpus.rs"

[dependencies]
svm-interp = { path = "../crates/svm-interp" }
svm-encode = { path = "../crates/svm-encode" }
svm-text   = { path = "../crates/svm-text" }
# `Module` is named by the fixture/corpus bins and by `powerbox_exec` (shared with the cdylib).
svm-ir     = { path = "../crates/svm-ir" }

[profile.release]
panic = "abort"
