# Detached (`[workspace]`) wasm entry crate — the SVM bytecode interpreter compiled to wasm so a
# host (browser / any wasm runtime) can run an SVM guest. Kept out of the main workspace because it
# targets wasm64 via `-Z build-std` (nightly), like `fuzz/`/`bench/`. See BROWSER.md.
[workspace]

[package]
name = "svm-browser"
version = "0.0.0"
edition = "2021"

# `cdylib` is the wasm artifact; `rlib` lets the native `gencorpus`/`genfixture` bins call the
# *same* `powerbox_exec` the wasm entry uses, so the differential compares identical logic.
[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "genfixture"
path = "src/genfixture.rs"

[[bin]]
name = "gencorpus"
path = "src/gencorpus.rs"

# `live` adds the host-backed powerbox entry `svm_run_live`, which declares real wasm **imports**
# (`svm_host.host_write` / `host_now_ns`). Off by default so the standard artifact stays import-free
# (`svm_run`/`run_guest`/`svm_run_pb` need no host functions); build `--features live` for the
# console/clock-bound variant. See BROWSER.md.
[features]
live = []

[dependencies]
svm-interp = { path = "../crates/svm-interp" }
svm-encode = { path = "../crates/svm-encode" }
svm-text   = { path = "../crates/svm-text" }
# The Debug Adapter Protocol server (DEBUGGING.md), driven over the bytecode `Debuggee` backend so
# the playground can debug SVM guests. Pure request→messages logic + hand-rolled JSON — wasm-clean
# (`run_stdio`, its only std::io surface, is never called here). See `svm_dap_request`.
svm-dap    = { path = "../crates/svm-dap" }
# `Module` is named by the fixture/corpus bins and by `powerbox_exec` (shared with the cdylib).
svm-ir     = { path = "../crates/svm-ir" }
svm-fs     = { path = "../crates/svm-fs" }
# The escape-freedom verifier — the security hinge of the guest-driven `Jit` cap's validator
# (decode → verify → preconditions). Pure (only deps `svm-ir`), so it builds for wasm.
svm-verify = { path = "../crates/svm-verify" }
# The durability transform (freeze/thaw IR rewrite) — used by the `gencorpus` ground truth and the
# `run_durable` probe to instrument a module + seed the durable window. Pure (only `svm-ir`).
svm-durable = { path = "../crates/svm-durable" }
# The wasm-JIT emitter (browser wasm-JIT tier, slice 1). Pure (only `svm-ir`); its output is
# compiled + run by the JS host against this cdylib's own linear memory — see `svm_wasmjit_compile`.
svm-wasmjit = { path = "../crates/svm-wasmjit" }

[profile.release]
panic = "abort"

[dev-dependencies]
# The native wasm-JIT reactor differential (`tests/jit_reactor.rs`) runs the emitted `tick` on `wasmi`
# (playing the browser's JS host) against the interpreter reactor oracle. Matches svm-wasmjit's dev-dep.
wasmi = { version = "0.47", features = ["simd"] }
