[package]
name = "svm-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

# This crate is intentionally OUTSIDE the workspace (see root Cargo.toml `exclude`).
# It requires a nightly toolchain + cargo-fuzz:
#   cargo install cargo-fuzz
#   cargo +nightly fuzz run decode_verify
[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
svm = { path = "../crates/svm" }
svm-ir = { path = "../crates/svm-ir" }
svm-encode = { path = "../crates/svm-encode" }
svm-verify = { path = "../crates/svm-verify" }
svm-interp = { path = "../crates/svm-interp" }
svm-jit = { path = "../crates/svm-jit" }
svm-mask = { path = "../crates/svm-mask" }
svm-text = { path = "../crates/svm-text" }

[[bin]]
name = "decode_verify"
path = "fuzz_targets/decode_verify.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mask"
path = "fuzz_targets/mask.rs"
test = false
doc = false
bench = false

[[bin]]
name = "roundtrip"
path = "fuzz_targets/roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "diff"
path = "fuzz_targets/diff.rs"
test = false
doc = false
bench = false

[profile.release]
debug = 1
