[package]
name = "svm-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

# This crate is intentionally OUTSIDE the workspace (see root Cargo.toml `exclude`).
# It requires a nightly toolchain + cargo-fuzz:
#   cargo install cargo-fuzz
#   cargo +nightly fuzz run decode_verify
[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
svm = { path = "../crates/svm" }
svm-ir = { path = "../crates/svm-ir" }
svm-encode = { path = "../crates/svm-encode" }
svm-verify = { path = "../crates/svm-verify" }
svm-spec = { path = "../crates/svm-spec" } # executable ISA spec — oracle for the spec_* targets
svm-interp = { path = "../crates/svm-interp" }
svm-jit = { path = "../crates/svm-jit" }
svm-durable = { path = "../crates/svm-durable" }
svm-snapshot = { path = "../crates/svm-snapshot" } # §12 snapshot codec, exercised x-backend by durable_jit
svm-run = { path = "../crates/svm-run" } # production cap.call thunk, for irgen's Memory-cap success path
svm-mask = { path = "../crates/svm-mask" }
svm-text = { path = "../crates/svm-text" }
svm-wasm = { path = "../crates/svm-wasm" } # untrusted core-wasm frontend, fuzzed for fail-closed decode
svm-opt = { path = "../crates/svm-opt" } # generic IR→IR optimizer, fuzzed for the SSA round-trip identity

[[bin]]
name = "opt_ssa_roundtrip"
path = "fuzz_targets/opt_ssa_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decode_verify"
path = "fuzz_targets/decode_verify.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mask"
path = "fuzz_targets/mask.rs"
test = false
doc = false
bench = false

[[bin]]
name = "roundtrip"
path = "fuzz_targets/roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "diff"
path = "fuzz_targets/diff.rs"
test = false
doc = false
bench = false

[[bin]]
name = "spec_ops"
path = "fuzz_targets/spec_ops.rs"
test = false
doc = false
bench = false

[[bin]]
name = "spec_verify"
path = "fuzz_targets/spec_verify.rs"
test = false
doc = false
bench = false

[[bin]]
name = "durable"
path = "fuzz_targets/durable.rs"
test = false
doc = false
bench = false

[[bin]]
name = "durable_fiber"
path = "fuzz_targets/durable_fiber.rs"
test = false
doc = false
bench = false

[[bin]]
name = "durable_loop"
path = "fuzz_targets/durable_loop.rs"
test = false
doc = false
bench = false

[[bin]]
name = "durable_loop_jit"
path = "fuzz_targets/durable_loop_jit.rs"
test = false
doc = false
bench = false

[[bin]]
name = "durable_jit"
path = "fuzz_targets/durable_jit.rs"
test = false
doc = false
bench = false

[[bin]]
name = "durable_recycle"
path = "fuzz_targets/durable_recycle.rs"
test = false
doc = false
bench = false

[[bin]]
name = "durable_recycle_jit"
path = "fuzz_targets/durable_recycle_jit.rs"
test = false
doc = false
bench = false

[[bin]]
name = "wasm_transpile"
path = "fuzz_targets/wasm_transpile.rs"
test = false
doc = false
bench = false

[profile.release]
debug = 1
