[package]
name = "svm-fiber"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

# The stack-switching substrate (§3d/§6/§12): guard-paged out-of-band control stacks plus the native
# context switch that swaps them. This is the *only* place the JIT's green-thread `unsafe` lives —
# mirroring how `svm-mem` isolates the memory `unsafe` — so it stays small and auditable.
[features]
# AddressSanitizer fiber-switch annotations (`__sanitizer_{start,finish}_switch_fiber`) around
# every stack switch, so ASan-instrumented code can run on fiber stacks. Enabled by the dedicated
# sanitizer job (nightly, -Zsanitizer=address); zero-cost otherwise.
asan = []
# The arena control-stack allocator is now the DEFAULT (see `lib.rs`): stacks are sub-allocated from
# large arenas with a free-list instead of one mmap+guard per fiber, so concurrency scales past the
# `vm.max_map_count` VMA wall (~0 extra VMAs/fiber). Overflow protection is the always-on svm-jit
# software stack-check. This feature is retained as a no-op only so existing `--features arena-stacks`
# invocations keep working.
arena-stacks = []
# Opt OUT of the arena back to the per-fiber hardware guard page (`stack_unix.rs`/`stack_windows.rs`):
# a rollback switch, and the backend the `stack_guard_fuzz` guard-page overflow oracle needs.
guard-page-stacks = []

[dependencies]

[target.'cfg(unix)'.dependencies]
# mmap'd, guard-paged stacks (PROT_NONE overflow guard). Other targets get no real fiber support yet.
libc = "0.2"

[target.'cfg(all(windows, target_arch = "x86_64"))'.dependencies]
# VirtualAlloc/VirtualProtect/VirtualFree for the guard-paged control stack (PAGE_NOACCESS overflow
# guard). The switch asm reads/writes the TEB stack fields directly (gs:[0x30]), so no extra API.
windows-sys = { version = "0.59", features = ["Win32_System_Memory"] }
