# The in-memory `fs` capability backend + the shared fs-cap wire protocol (op codes, `stat` layout,
# path vetting). Pure — depends only on `svm-interp` for the `HostFn`/`GuestMem` interface — so it
# builds for **wasm** (the browser cdylib mounts a data-image `mem_fs` without a real filesystem),
# unlike `svm-run` which pulls in the unix-only JIT. `svm-run` keeps the real-filesystem `host_fs`
# backend and wraps these handlers in its `HostCap`. See `crates/svm-run/src/fs.rs`.
[package]
name = "svm-fs"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
svm-interp.workspace = true
