[package]
name = "svm-interp"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
svm-ir.workspace = true
svm-mask.workspace = true
# The shared guest-memory substrate (§12/§13): a demand-zeroed, raw-addressable region with real
# hardware atomics. All the `unsafe` lives there, so this crate stays `#![forbid(unsafe_code)]` while
# gaining the shareable backing parallel vCPUs will run over.
svm-mem.workspace = true
# The verifier's type assignment, reused (single source of truth) so the debugger can give an
# interpreter value slot its source-level type — slots are untyped on the hot path (§ the `Reg`
# value model), so typed reads (`backtrace`/`read_ir_value`/`read_var`) reconstruct via this.
svm-verify.workspace = true
# Host page size for the protection model — a tiny *safe* wrapper (keeps `#![forbid(unsafe_code)]`),
# so the interpreter's RO/unmap granularity matches the JIT's real `mprotect` on the same host
# (§4 "pin page size" → host-page default; both backends query the same value, so they agree
# page-for-page on any platform: 4 KiB / 16 KiB / …). Native-only: wasm has no host MMU (its
# linear-memory pages are a fixed 64 KiB), so the wasm build hard-codes that and drops this crate
# from its dependency graph — see `host_page_size`.
[target.'cfg(not(target_family = "wasm"))'.dependencies]
page_size = "0.6"

# Test-only: parse SVM text kernels for the parallel-driver Miri check (THREADS.md step 4c). Pure
# parser (only depends on `svm-ir`), so it keeps the test crate Miri-buildable — unlike the `svm`
# integration-test crate, which pulls in the Cranelift JIT that Miri can't compile.
[dev-dependencies]
svm-text.workspace = true
# Test-only: name `svm_ir::Func` in the JIT Miri check's blob validator (THREADS.md 4c-domain). Pure
# IR types (no platform surface), so it keeps the test crate Miri-buildable.
svm-ir.workspace = true
