[package]
name = "svm-jit"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
cranelift-codegen = "0.132.0"
cranelift-frontend = "0.132.0"
cranelift-jit = "0.132.0"
cranelift-module = "0.132.0"
cranelift-native = "0.132.0"
svm-ir.workspace = true

[target.'cfg(unix)'.dependencies]
# Guard-paged window + the SIGSEGV/SIGBUS detect-and-kill handler (§4/§5) — unix only;
# other targets fall back to a plain heap window with no hardware guard.
libc = "0.2"

[target.'cfg(windows)'.dependencies]
# The windows PAL (§4 "Platform support", Phase 3.5): VirtualAlloc/VirtualProtect/VirtualFree for
# the reserved guard-paged window, and a Vectored Exception Handler + RtlCaptureContext for
# detect-and-kill. Pure Rust (no C shim), so the path stays `cargo check --target *-windows-*`-able.
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_System_Kernel",
] }

[build-dependencies]
# `build.rs` compiles src/trap_shim.c (the setjmp/siglongjmp recovery — a macro that needs the C
# compiler's returns_twice handling, so it can't be sound raw FFI). The crate must be present on
# *every* host (build scripts run on the host), but the shim is only compiled for **unix targets**
# — `build.rs` gates the actual `cc::Build` call on `CARGO_CFG_UNIX`, so a windows build pulls `cc`
# but never invokes a C compiler. (Gating the dep itself on `cfg(unix)` matches the *host*, which
# breaks building on a windows host — the cross-check from a unix host can't catch that.)
cc = "1"
