[package]
name = "svm-llvm"
version = "0.0.0"
edition = "2021"
publish = false

# The AOT **LLVM-bitcode → SVM-IR on-ramp** (D54; see `LLVM.md`). Like the chibicc fork and
# `svm-wasm`, it is a **frontend, not part of the escape-TCB**: it consumes `svm-ir` to produce
# a verifier-checked `Module` and is never a dependency of `svm-jit`/`svm-interp`. Its output is
# re-verified, so a translation bug is a clean error, not an escape (§2a).
#
# It links libLLVM (via `llvm-ir` → `llvm-sys`) at **build/dev time only**, so it is **excluded
# from the workspace** (root `Cargo.toml`) and built as an opt-in, Linux-dev-only lane — the
# cross-OS runtime matrix never links libLLVM (D54 "off the runtime path"; LLVM.md §8 Q4).

[dependencies]
svm-ir = { path = "../svm-ir" }
# Reads legalized bitcode into an owned, pure-Rust AST (LLVM.md §8 Q1). Pinned to the LLVM-18
# feature to match the container's `clang`/`libLLVM` (LLVM.md §2). Off-version bitcode is rejected.
llvm-ir = { version = "0.11.3", features = ["llvm-18"] }
# `llvm-ir` pulls in `llvm-sys` (181.x = LLVM 18); we depend on it directly only to flip its
# link mode to **dynamic** (feature unification), since distros ship `libLLVM.so` without the
# static `.a`s (`llvm-18-dev` provides headers + the dylib, not Polly/static archives). Build/dev
# only — never linked into the runtime crates (LLVM.md §8 Q4).
llvm-sys = { version = "181", features = ["prefer-dynamic"] }

[dev-dependencies]
svm-text = { path = "../svm-text" }
svm-verify = { path = "../svm-verify" }
svm-interp = { path = "../svm-interp" }
# The JIT, so every translation test is also an interp↔JIT differential (the §18 oracle).
svm-jit = { path = "../svm-jit" }
# The reference host/powerbox — drives a capability-using program (`_start`) end-to-end (the Lane C
# demo: real stdout + exit code vs native), and resolves §7 named imports to concrete capabilities.
svm-run = { path = "../svm-run" }
