[package]
name = "svm-llvm"
version = "0.0.0"
edition = "2021"
publish = false

# The AOT **LLVM-bitcode → SVM-IR on-ramp** (D54; see `LLVM.md`). Like the chibicc fork and
# `svm-wasm`, it is a **frontend, not part of the escape-TCB**: it consumes `svm-ir` to produce
# a verifier-checked `Module` and is never a dependency of `svm-jit`/`svm-interp`. Its output is
# re-verified, so a translation bug is a clean error, not an escape (§2a).
#
# It links libLLVM (via `llvm-ir` → `llvm-sys`) at **build/dev time only**, so it is **excluded
# from the workspace** (root `Cargo.toml`) and built as an opt-in, Linux-dev-only lane — the
# cross-OS runtime matrix never links libLLVM (D54 "off the runtime path"; LLVM.md §8 Q4).

[dependencies]
svm-ir = { path = "../svm-ir" }
# The `svm-llvm-translate` CLI emits the translated module as text (`.svm`) or binary (`.svmb`);
# pure-Rust serializers (no LLVM), shared with the runtime crates.
svm-text = { path = "../svm-text" }
svm-encode = { path = "../svm-encode" }
# Reads legalized bitcode into an owned, pure-Rust AST (LLVM.md §8 Q1). Pinned to the LLVM-18
# feature to match the container's `clang`/`libLLVM` (LLVM.md §2). Off-version bitcode is rejected.
llvm-ir = { version = "0.11.3", features = ["llvm-18"] }
# `llvm-ir` pulls in `llvm-sys` (181.x = LLVM 18); we depend on it directly only to flip its
# link mode to **dynamic** (feature unification), since distros ship `libLLVM.so` without the
# static `.a`s (`llvm-18-dev` provides headers + the dylib, not Polly/static archives). Build/dev
# only — never linked into the runtime crates (LLVM.md §8 Q4).
llvm-sys = { version = "181", features = ["prefer-dynamic"] }

[dev-dependencies]
svm-verify = { path = "../svm-verify" }
svm-interp = { path = "../svm-interp" }
# The JIT, so every translation test is also an interp↔JIT differential (the §18 oracle).
svm-jit = { path = "../svm-jit" }
# The partial evaluator (§20c): the end-to-end Futamura demo specializes a real LLVM-translated
# interpreter against a fixed program and measures the size/speed win (`tests/peval_demo.rs`).
svm-peval = { path = "../svm-peval" }
# The reference host/powerbox — drives a capability-using program (`_start`) end-to-end (the Lane C
# demo: real stdout + exit code vs native), and resolves §7 named imports to concrete capabilities.
svm-run = { path = "../svm-run" }
# The W5 DAP server — drives a *real* LLVM-translated module (its §6 debug info, serialized to text)
# through the Debug Adapter Protocol end-to-end, proving the LLVM producer feeds the DAP consumer.
svm-dap = { path = "../svm-dap" }

# The library is the lib target; the `svm-llvm-translate` CLI is an explicit bin so the
# **separate-artifact** path is scriptable: translate a `.bc` once to a `.svm`/`.svmb` module plus a
# `.syms` export sidecar, then a frontend links many programs against it (`svm_ir::link`).
[[bin]]
name = "svm-llvm-translate"
path = "src/bin/translate.rs"
